# fleetglass

./: .gitignore  PLAN.md  README.md  agreement.js  agreement.test.js  contextroi.js  contextroi.test.js  fork.js  fork.test.js  judge.js  judge.test.js  package.json  regression.js  regression.test.js  savings.js  savings.test.js  server.js  simulator.js  store.js  store.test.js  tracer.js  translate.js  translate.test.js  yield.js  yield.test.js
.claude/: launch.json
docs/: savings-report-template.md
docs/superpowers/plans/: 2026-07-05-universal-onboarding.md  2026-07-07-agreement-metric-refinement.md  2026-07-07-m2-context-roi.md  2026-07-07-m3-pathology-detection.md  2026-07-07-savings-m1-plan1-faithful-fork.md  2026-07-07-savings-m1-plan2-engine-report.md  2026-07-07-savings-platform-roadmap.md  2026-07-08-m4-prompt-regression.md  2026-07-08-m5-yield.md  2026-07-10-auto-routing.md  2026-07-10-kill-switch.md  2026-07-10-unified-client.md  2026-07-15-repo-reorg.md  2026-07-15-shadow-mode.md
docs/superpowers/specs/: 2026-07-05-universal-onboarding-design.md  (+11 more)
engines/: agreement.test.js  pathology.js  pathology.test.js  savings.js  shadow.js  shadow.test.js
examples/: claude-fleet.mjs  gemini-fleet.mjs  gemini-fleet.py  package-lock.json  package.json  requirements.txt
public/: app.js  index.html
sdk/node/: adapters.js  adapters.test.js  client.js  client.test.js  index.js  tracer.js  tracer.test.js  translate.js
sdk/python/: pyproject.toml  test_adapters.py  test_tracer.py
sdk/python/fleetglass/: __init__.py  adapters.py  tracer.py
