[project]
name = "fleetglass"
version = "0.1.0"
description = "Zero-dependency tracer for onboarding agent workflows to FleetGlass."
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fleetglass"]
